--- a/exjsrpgbattle.html
+++ b/exjsrpgbattle.html
@@ -682,7 +682,7 @@ $(function(){
   <!--<textarea name="output" cols="50" rows="10"></textarea>-->
 </form>
 <button id="load">ロード</button>
-<a id="savelink" target="_blank"><button id="save">セーブ</button></a>
+<a id="savelink"><button id="save">セーブ</button></a>
 <p id="msg"></p>
 <br>
 <button id = "btnA" disabled = "disabled">A</button>
